Removed right offset in top-content to prevent extra scrollbar in Ubuntu and Windows.

--- a/kohese-portal/client/css/style.css
+++ b/kohese-portal/client/css/style.css
@@ -72,6 +72,7 @@ body {
   overflow: auto;
   bottom: 356px;
   top: 100px;
+  right: 0;
   width: calc(100% - 250px);
 }
 
